fix button alignment

--- a/client/src/app/components/blog/blog.component.css
+++ b/client/src/app/components/blog/blog.component.css
@@ -68,6 +68,10 @@ button.close{
 	color: #222;
 }
 
+.btn-margin-left {
+	margin-left: 5px;
+}
+
 .card{
 	margin: 0 auto 15px auto;
 }
